--- a/kertotaulu.css
+++ b/kertotaulu.css
@@ -19,6 +19,27 @@ div {
   display: inline-block;
   outline: none;
 }
+button {
+  margin-left: 10px;
+  display: inline-block;
+  font-size: 40px;
+  border-radius: 10px;
+  border: none;
+  padding: 7px 15px;
+  background: #7ebfc1;
+  color: #fff;
+  text-transform: uppercase;
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.3);
+  cursor: pointer;
+}
+
+button:hover {
+  background: #599698;
+  color: #eee;
+}
+button:active {
+  box-shadow: 0px 2px 5px 0px inset rgba(0,0,0,0.3);
+}
 .kysymys {
   text-align: center;
   font-size: 40px;
